--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@mui/x-data-grid": "^8.12.1",
+    "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "next": "^15.5.4",
     "next-intl": "^4.3.9",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1"
+    "react-dom": "^19.0.0-rc.1",
+    "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
+    "react-quill-new": "^3.6.0",
+    "react-redux": "^9.2.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,8 +35,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.36.0",
     "eslint-config-next": "15.5.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.6.2",
     "typescript": "^5"
   }
 }
