--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/x-data-grid": "^8.12.1",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
+    "jwt-decode": "^4.0.0",
     "next": "^15.5.4",
     "next-intl": "^4.3.9",
     "normalize.css": "^8.0.1",
@@ -27,6 +30,7 @@
     "react-hot-toast": "^2.6.0",
     "react-quill-new": "^3.6.0",
     "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
