--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@mui/x-data-grid": "^8.12.1",
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.9.0",
+    "@stripe/stripe-js": "^8.1.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.22",
+    "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "next": "^15.5.4",
     "next-intl": "^4.3.9",
@@ -31,6 +32,8 @@
     "react-quill-new": "^3.6.0",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
+    "stripe": "^19.1.0",
+    "tripe": "^1.0.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
