--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@stripe/stripe-js": "^8.1.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "next": "^15.5.4",
@@ -30,10 +31,12 @@
     "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
+    "react-multi-carousel": "^2.8.6",
     "react-quill-new": "^3.6.0",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
     "stripe": "^19.1.0",
+    "swiper": "^12.0.3",
     "tripe": "^1.0.1",
     "yup": "^1.7.1"
   },
