--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@date-io/dayjs": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
-    "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.12.1",
+    "@mui/x-date-pickers": "^8.16.0",
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.9.0",
     "@stripe/stripe-js": "^8.1.0",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
@@ -28,6 +31,7 @@
     "normalize.css": "^8.0.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0-rc.1",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
